--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,10 +5,12 @@
 
 @media (min-width: 768px) {
   .lead {
-    padding-bottom: 88px;  }
+    padding-bottom: 88px;
+  }
 }
 
 @media (min-width: 1024px) {
   .lead {
-    padding-bottom: 92px;  }
+    padding-bottom: 92px;
+  }
 }
