--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,7 @@
 
 /* content */
 @import url(../blocks/content/content.css);
+@import url(../blocks/wrap/wrap.css);
 
 /* lead */
 @import url(../blocks/lead/lead.css);
@@ -21,3 +22,10 @@
 @import url(../blocks/lead/__wrap-img/lead__wrap-img.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
+
+/* intro */
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-light/intro__list-light.css);
