--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,6 +1,6 @@
 .cover__link {
   width: 100%;
-  min-height: 740px;
+  min-height: calc(100vw/1.55);
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -32,8 +32,8 @@
   opacity: 0.8;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
   .cover__link {
-      min-height: calc(100vw/1.6);
+    min-height: 740px;
   }
 }
