--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,6 +2,10 @@
   padding-bottom: 50px;
 }
 
+.place:last-child {
+  padding-bottom: 0;
+}
+
 @media (min-width: 768px) {
   .place {
     display: grid;
