правка по пиксель перфект для десктопов

--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -6,3 +6,9 @@
   letter-spacing: 2.4px;
   padding-bottom: 15px;
 }
+
+@media (min-width: 1024px) {
+  .place__url-heading {
+    padding-bottom: 8px;
+  }
+}
