--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -32,5 +32,7 @@
 @media (min-width: 1280px) {
   .place {
     grid-column-gap: 40px;
+    max-width: 984px;
+    grid-template-columns: minmax(320px, 460px) minmax(288px, 484px);
   }
 }
