--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,7 @@
 .place__title {
   font-size: 32px;
   line-height: 1.09;
+  font-weight: var(--weight-black);
   padding: 0 16px 32px;
   margin: 0;
 }
