--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,6 +2,12 @@
   padding-bottom: 66px;
 }
 
+@media (min-width: 768px) {
+  .places  {
+    padding-bottom: 79px;
+  }
+}
+
 @media (min-width: 1280px) {
   .places  {
     padding-bottom: 91px;
