--- a/blocks/wrap/wrap.css
+++ b/blocks/wrap/wrap.css
@@ -2,4 +2,12 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  max-width: 928px;
+}
+
+
+@media (min-width: 1280px) {
+  .wrap {
+    max-width: 984px;
+  }
 }
