--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,7 +4,13 @@
 
 @media (min-width: 768px) {
   .places  {
-    padding-bottom: 79px;
+    padding-bottom: 90px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .places  {
+    padding-bottom: 72px;
   }
 }
 
