--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -4,6 +4,13 @@
   border-bottom: 1px #fff solid;
   position: relative;
   display:inline-block;
+  width: fit-content;
+  font-size: 18px;
+  line-height: 1.22;
+}
+
+.place__link:hover {
+  opacity: 0.8;
 }
 
 @media (min-width: 768px) {
