--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,7 @@
   font-size: 24px;
   line-height: 1;
   margin-bottom: 32px;
+  width: fit-content;
 }
 
 .footer__link:last-child {
@@ -19,11 +20,11 @@
   .footer__link {
     font-size: 16px;
     line-height: 1.13;
-    padding-right: 18px;
+    margin-right: 18px;
     margin-bottom: 0;
   }
 
   .footer__link:last-child {
-    padding-right: 0;
+    margin-right: 0;
   }
 }
