--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,8 @@
 .intro {
   padding: 0 16px 64px;
   text-align: left;
+  max-width: 928px;
+  align-self: start;
 }
 
 @media (min-width: 768px) {
@@ -11,7 +13,13 @@
 
 @media (min-width: 1024px) {
   .intro {
-    padding: 0 0 92px;
-    max-width: 690px;
+    padding: 0 0 92px 48px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .intro {
+    padding: 0 0 92px 148px;
+    max-width: 984px;
   }
 }
