--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
-@import url(../blocks/root/root.css);
+@import url(../vendor/variables/root.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__container/page__container.css);
 
@@ -9,12 +9,12 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__links/header__links.css);
+@import url(../blocks/header/__link-wrap/header__link-wrap.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__link/_active/header__link_active.css);
 
 /* content */
 @import url(../blocks/content/content.css);
-@import url(../blocks/wrap/wrap.css);
 
 /* lead */
 @import url(../blocks/lead/lead.css);
@@ -45,7 +45,7 @@
 @import url(../blocks/place/__website/place__website.css);
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__image/place__image.css);
-@import url(../blocks//place/__paragraf-wrapper/place__paragraf-wrapper.css);
+@import url(../blocks/place/__paragraf-wrapper/place__paragraf-wrapper.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 
 /* cover */
